--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"chess": "^1.1.0",
+		"cm-chessboard": "^7.6.10",
 		"express": "^4.18.2",
 		"socket.io": "^4.6.2",
 		"socket.io-client": "^4.6.2",
